# SemanticVersioner

./: README.md  action.yml  main.py  pyproject.toml
.github/workflows/: increment-version-develop.yml  increment-version-main.yml
